# CADG

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  example.cpp
SOAP/XML-parsing/: SOAPMessageTest.xml  UsersXMLParseTest.cpp  XMLParser.cpp  XMLParser.h  capAcknowledgement.xml
alert-db/: create_alert_db.sql
alert-examples/: ipaws_cap_monthly_test_example.xml  ipaws_cap_national_alert_example.xml  ipaws_cap_national_alert_termination_example.xml  ipaws_cap_test_alert_example.xml
cadg-db/: Dockerfile  README.md  create_cadg_db.sql  create_message_dbo.sql
cadg-ui/: Dockerfile  README.md  package-lock.json  package.json
cadg-ui/public/: index.html
cadg-ui/src/: App.js  index.js  store.js
docker-cadg-apache/: .dockerignore  Dockerfile  README.md
docker-cadg-apache/apache_config/: httpd.conf
docker-cadg-apache/html_files/: .gitignore  asset-manifest.json  index.html  precache-manifest.05be268f84475a0dd8e811ebd1eacacb.js  precache-manifest.82caca13aca1bc5ced39daacc92034ab.js  precache-manifest.d11fa4bedbca6eb42a13b01d5ac98d0c.js  service-worker.js
docker-cadg-apache/ssl_cert/: .gitignore  privkey.pem
docker-cadg-compose/: docker-compose.yml
docker-cadg-soap-env/: Dockerfile  README.md
docker-test-env/: Dockerfile  README.md  env-setup.sh
docs/html/: annotated.html  annotated_dup.js  classcadg__rest_1_1_controller-members.html  classcadg__rest_1_1_controller.html  classcadg__rest_1_1_controller.js  classcadg__rest_1_1_controller__coll__graph.dot  classcadg__rest_1_1_controller__coll__graph.md5  classcadg__rest_1_1_controller__inherit__graph.dot  classcadg__rest_1_1_controller__inherit__graph.md5  classcadg__rest_1_1_controller_a00ddfc462ff7357cecc6a209f8f9d527_cgraph.dot  classcadg__rest_1_1_controller_a00ddfc462ff7357cecc6a209f8f9d527_cgraph.md5  classcadg__rest_1_1_controller_a00ddfc462ff7357cecc6a209f8f9d527_icgraph.dot  classcadg__rest_1_1_controller_a00ddfc462ff7357cecc6a209f8f9d527_icgraph.md5  classcadg__rest_1_1_controller_a0a3930fbecd66d40b2455557c1c46e47_icgraph.dot  classcadg__rest_1_1_controller_a0a3930fbecd66d40b2455557c1c46e47_icgraph.md5  classcadg__rest_1_1_controller_a47b2c049207e02f407a55a64e2a2ce80_icgraph.dot  classcadg__rest_1_1_controller_a47b2c049207e02f407a55a64e2a2ce80_icgraph.md5  classcadg__rest_1_1_controller_a6405c6b368ec22d3c870bdd1db92490a_icgraph.dot  classcadg__rest_1_1_controller_a6405c6b368ec22d3c870bdd1db92490a_icgraph.md5  classcadg__rest_1_1_controller_ac467633f4d51e3187bd90380a67cb0d9_cgraph.dot  classcadg__rest_1_1_controller_ac467633f4d51e3187bd90380a67cb0d9_cgraph.md5  classcadg__rest_1_1_controller_ac467633f4d51e3187bd90380a67cb0d9_icgraph.dot  classcadg__rest_1_1_controller_ac467633f4d51e3187bd90380a67cb0d9_icgraph.md5  (+711 more)
docs/latex/: annotated.tex  (+508 more)
rest-server/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  env-vars.sh
rest-server/cmake/Modules/: FindGSOAP.cmake
rest-server/doc/: Doxyfile
rest-server/src/: rest_server.cpp
rest-server/src/controller/: admin_controller.cpp  admin_controller.hpp  alert_controller.cpp  alert_controller.hpp  aog_controller.cpp  aog_controller.hpp  cmsp_controller.hpp  controller.cpp  controller.hpp  disseminator_controller.cpp  disseminator_controller.hpp  user_controller.cpp  user_controller.hpp
rest-server/src/gSoap Files/CAP/: ns1.nsmap  soapC.cpp  soapH.h  soapStub.h
rest-server/src/gSoap Files/soap-env/: ns1.nsmap  soap-envelope  soap-envelope.h  soapC.cpp  soapH.h  soapStub.h
rest-server/src/gSoapFiles/CAP/: CAP-v1.2.h  cadg_soapC.cpp  cadg_soapH.hpp  cadg_soapStub.hpp  cap_message.h  ns1.nsmap  ns2.nsmap  soapC.cpp  soapH.h  soapStub.h
rest-server/src/gSoapFiles/IPAWS/: CAPSoapHttp.getMessage.req.xml  CAPSoapHttp.getMessage.res.xml  CAPSoapHttp.getRequest.req.xml  CAPSoapHttp.getRequest.res.xml  CAPSoapHttp.nsmap  CAPSoapHttp.postCAP.req.xml  CAPSoapHttp.postCAP.res.xml  ipaws.h  soapC.cpp  soapCAPSoapHttpService.cpp  soapCAPSoapHttpService.h  soapH.h  soapReadme.md  soapStub.h
rest-server/src/model/: admin.hpp  alert.hpp  aog.hpp  disseminator.hpp  user.hpp
rest-server/src/model/cmac/: cmac_alert.hpp  cmac_alert_area.hpp  cmac_alert_info.hpp  cmac_alert_text.hpp
rest-server/src/nanodbc/: nanodbc.cpp  nanodbc.hpp
rest-server/src/services/: admin_dao.cpp  admin_dao.hpp  admin_dao_interface.hpp  alert_dao.cpp  alert_dao.hpp  alert_dao_interface.hpp  aog_dao.cpp  aog_dao.hpp  aog_dao_interface.hpp  cap_validation.cpp  cap_validation.hpp  data_access_interface.hpp  data_access_object.cpp  data_access_object.hpp  disseminator_dao.cpp  disseminator_dao.hpp  disseminator_dao_interface.hpp  dissemintor_dao_interface.hpp  log_level.hpp  logger.cpp  logger.hpp  logger_interface.hpp
rest-server/src/soap/controller/: soap_controller.cpp  soap_controller.hpp
rest-server/src/util/: network_utils.cpp  network_utils.hpp
soap-server/: CMakeLists.txt  Dockerfile
soap-server/src/: soap_server.cpp
soap-server/src/gSOAP Files/: soapCAPSoapHttpService.cpp  soapCAPSoapHttpService.h  soapReadme.md
soap-server/src/gSOAPFiles/: CAPSoapHttp.nsmap  soapC.cpp  soapH.h  soapStub.h
soap-server/src/gSOAPFiles/Example Messages/: CAPSoapHttp.getMessage.req.xml  CAPSoapHttp.getMessage.res.xml  CAPSoapHttp.getRequest.req.xml  CAPSoapHttp.getRequest.res.xml  CAPSoapHttp.postCAP.req.xml  CAPSoapHttp.postCAP.res.xml
soap-server/src/gSoapFiles/CAP/: CAP-v1.2.h  cadg_soapC.cpp  cadg_soapH.h  cadg_soapStub.h  ns1.nsmap
soap-server/src/services/: cap_validation.hpp  log_level.hpp  logger.cpp  logger.hpp  logger_interface.hpp
soap-server/src/soap/controller/: soap_controller.cpp  soap_controller.hpp
soap-server/src/util/: network_utils.hpp
test/: CMakeLists.txt  Dockerfile  test_suite.cpp
test/controller/: controller_test.cpp  mock_data_access.hpp  mock_logger.hpp  user_controller_test.cpp
test/rest-server/controller/: controller_test.cpp  mock_data_access.hpp  mock_logger.hpp  user_controller_test.cpp
test/rest-server/model/: alert_test.cpp
test/soap/xml-parsing/: soap_message_test.xml  xml_parser_test.cpp
(+136 files in other folders)
